Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -2962,7 +2962,7 @@ font-weight: bold !important;
     color: #000000 !important;
 }
 .custom_ui_13884_13885 .nav-link.active .css__title,
-.custom_ui_13884_13885 .nav-pills .nav-link.active .zq12273 {
+.custom_ui_13884_13885 .nav12273 .nav-link.active .zq12273 {
     color: #FFFFFF !important;
 }
 .custom_ui_13884_13885 .nav-pills .nav-link.active {
